# qrosturm

./: CMakeLists.txt
include/: qrosturm.h
src/: qrosturm.cpp
test/: main.cpp
